EDU-1392 Bonus commit: Fix funny bug with radio button visible over overlay when duplicating document

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -336,6 +336,7 @@
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: @edu-z-index-cover-layer;
 }
 
 .m-link(@color: @edu-link-color) {
